--- a/src/css/contentPage.css
+++ b/src/css/contentPage.css
@@ -46,23 +46,24 @@
 }
 
 .content-page-left-container{
-    width: 15vw;
+    width: 16vw;
     height: 100%;
-    background-color: rgba(173, 244, 213, 0.918);
+    background-color: rgba(211, 206, 206, 0.918);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: auto;
 }
 
 .content-page-right-container{
-    width: 85vw;
+    width: 84vw;
     height: 100%;
 }
 
 .menu-bar-class{
     /* height: 84vh;   */
-    height: 100%;
-    background-color: rgba(211, 206, 206, 0.918);;
+    /* height: 100%; */
+    background-color: rgba(211, 206, 206, 0.918);
 }
 
 .arrow-hidden .ant-menu-submenu-arrow {
