--- a/src/css/tournament.css
+++ b/src/css/tournament.css
@@ -35,6 +35,15 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
 }
 
+.back-button{
+    float: left;
+    margin-left: 15px;
+    margin-bottom: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+}
+
 .total-tournament-card p{
     margin: 0;
     
