--- a/src/css/tournament.css
+++ b/src/css/tournament.css
@@ -62,3 +62,9 @@
 .see-details-button{
     background-color: rgb(93, 158, 93);
 }
+
+.ant-tag {
+  display: inline-block; 
+  vertical-align: middle; 
+  line-height: normal; 
+}
