Rest of the work is submitted

--- a/src/css/tournament.css
+++ b/src/css/tournament.css
@@ -53,6 +53,10 @@
     align-items: center;
 }
 
+.reject-button{
+    margin-left: 5px;
+}
+
 .add-tournament{
     float: right;
     display: flex;
